# varg-stm32h5-bootloader

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  README.md  STM32H563ZGTX_FLASH.ld  STM32H563ZGTX_RAM.ld  varg-stm32h5-bootloader Debug.cfg  varg-stm32h5-bootloader Debug.launch  varg-stm32h5-bootloader Release_custom.launch  varg-stm32h5-bootloader.ioc
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  tim.h
Core/Src/: adc.c  dac.c  fdcan.c  flash.c  gpdma.c  gpio.c  main.c  spi.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  tim.c
Debug/: makefile  objects.list  sources.mk  varg-stm32h5-bootloader.elf  varg-stm32h5-bootloader.list  varg-stm32h5-bootloader.map
Debug/Core/Src/: adc.cyclo  adc.d  adc.su  dac.cyclo  dac.d  dac.su  fdcan.cyclo  fdcan.d  fdcan.su  gpdma.d  gpio.d  icache.d  main.cyclo  main.d  (+14 more)
services/can/: can_message_handler.c  can_message_handler.h
services/fw-utils/: .gitmodules  README.md  utils.c  utils.h
services/fw-utils/bootloader/fw_verification/: CMakeLists.txt  README.md  fw.cmake  fw.h  fw_verification.c  fw_verification.h  fw_verification_test.c  fwfile.c  keygen.c  utils.c  utils.h
services/memory/: mem.c  mem.h
sf_hal_charger_board/buck_hal/: sf_buck_hal.c  sf_buck_hal.h
sf_hal_charger_board/fans_hal/: sf_charger_fan_hal.c  sf_charger_fan_hal.h
sf_hal_charger_board/led_hal/: sf_charger_led_hal.h
sf_hal_charger_board/measurements_hal/: sf_charger_measurements_hal.c  sf_charger_measurements_hal.h
sf_hal_charger_board/pfc_hal/: sf_pfc_hal.c  sf_pfc_hal.h
sf_hal_charger_board/relay_hal/: sf_charger_relays_hal.h
(+47 files in other folders)
